--- a/index.html
+++ b/index.html
@@ -420,6 +420,19 @@
       <h2 class="section-title wow fadeInUp">Publications</h2>
     
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+      <div class="panel panel-default">
+        <table style="width:100%">
+          <tr>
+            <td class="panel-heading" role="tab" id="heading9">  
+		da Silva, T., Silva, E., <Strong>Ribeiro, A.</Strong>, Góis, A., Heider, D., Kaski, S. and Mesquita, D., (2023). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i>i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
+
+		       
+          </tr> 
+        </table>
+       </div>
+
+
 		
       <div class="panel panel-default">
         <table style="width:100%">
