--- a/index.html
+++ b/index.html
@@ -504,8 +504,14 @@ counterfactual inferences about clusters of variables.
           <tr>
             <td class="panel-heading" role="tab" id="heading7">
 		    Mundt, M., Cooper, K.W., Dhami, D.S., <Strong>Ribeiro, A. H.</Strong>, Smith, J.S., Bellot A., Hayes, T. (2023) Continual Causality: A Retrospective of the Inaugural AAAI-23 Bridge Program.<i> Proceedings of The First AAAI Bridge Program on Continual Causality, PMLR 208:1-10 </i>. <a href="https://proceedings.mlr.press/v208/mundt23a.html" target="_blank">(Link)</a></td>
+            <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse7" aria-expanded="false" aria-controls="collapse7"></a></td>
           </tr> 
         </table>
+		<div id="collapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading7">
+            <div class="panel-body">
+              Both of the fields of continual learning and causality investigate complementary aspects of human cognition and are fundamental components of artificial intelligence if it is to reason and generalize in complex environments. Despite the burgeoning interest in investigating the intersection of the two fields, it is currently unclear how causal models may describe continuous streams of data and vice versa, how continual learning may exploit learned causal structure. We proposed to bridge this gap through the inaugural AAAI-23 “Continual Causality” bridge program, where our aim was to take the initial steps towards a unified treatment of these fields by providing a space for learning, discussions, and to build a diverse community to connect researchers. The activities ranged from traditional tutorials and software labs, invited vision talks, and contributed talks based on submitted position papers, as well as a panel and breakout discussions. Whereas materials are publicly disseminated as a foundation for the community: https://www.continualcausality.org, respectively discussed ideas, challenges, and prospects beyond the inaugural bridge are summarized in this retrospective paper.
+            </div>
+          </div>
        </div>
 
 
