--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <table style="width:100%">
           <tr>
             <td class="panel-heading" role="tab" id="heading9">  
-		da Silva, T., Silva, E., <Strong>Ribeiro, A.</Strong>, Góis, A., Heider, D., Kaski, S. and Mesquita, D., (2023). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i>i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
+		da Silva, T., Silva, E., <Strong>Ribeiro, A. H.</Strong>, Góis, A., Heider, D., Kaski, S. and Mesquita, D., (2023). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i>i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
 
 		       
           </tr> 
@@ -439,7 +439,7 @@
           <tr>
             <td class="panel-heading" role="tab" id="heading9">  
 
-		    Meneguitti Dias, F., Ribeiro, E., <Strong>Ribeiro, A.</Strong>, Krieger, J., Antonio Gutierrez, M. (2023). Artificial Intelligence-Driven Screening System for Rapid Image-Based Classification of 12-Lead ECG Exams: A Promising Solution for Emergency Room Prioritization. <i> IEEE Access </i> <a href="https://doi.org/10.1109/ACCESS.2023.3328538" target="_blank">https://doi.org/10.1109/ACCESS.2023.3328538</a></td>
+		    Meneguitti Dias, F., Ribeiro, E., <Strong>Ribeiro, A. H.</Strong>, Krieger, J., Antonio Gutierrez, M. (2023). Artificial Intelligence-Driven Screening System for Rapid Image-Based Classification of 12-Lead ECG Exams: A Promising Solution for Emergency Room Prioritization. <i> IEEE Access </i> <a href="https://doi.org/10.1109/ACCESS.2023.3328538" target="_blank">https://doi.org/10.1109/ACCESS.2023.3328538</a></td>
           </tr> 
         </table>
        </div>
@@ -449,7 +449,7 @@
           <tr>
             <td class="panel-heading" role="tab" id="heading9">  
 
-	    Tajabadi, M, Grabenhenrich, L., <Strong>Ribeiro, A.</Strong>, Leyer, M., Heider D. (2023). Sharing Data With Shared Benefits: Artificial Intelligence Perspective. <i> J Med Internet Res 2023;25:e47540 </i> <a href="https://www.jmir.org/2023/1/e47540" target="_blank">(Link)</a></td>
+	    Tajabadi, M, Grabenhenrich, L., <Strong>Ribeiro, A. H.</Strong>, Leyer, M., Heider D. (2023). Sharing Data With Shared Benefits: Artificial Intelligence Perspective. <i> J Med Internet Res 2023;25:e47540 </i> <a href="https://www.jmir.org/2023/1/e47540" target="_blank">(Link)</a></td>
           </tr> 
         </table>
        </div>
