--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <table style="width:100%">
           <tr>
             <td class="panel-heading" role="tab" id="heading9">  
-		da Silva, T., Silva, E., <Strong>Ribeiro, A. H.</Strong>, Góis, A., Heider, D., Kaski, S. and Mesquita, D., (2023). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i>i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
+		da Silva, T., Silva, E., <Strong>Ribeiro, A. H.</Strong>, Góis, A., Heider, D., Kaski, S. and Mesquita, D., (2023). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
 
 		       
           </tr> 
