Fixing author name

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ Third, we prove the proposed calculus to be complete for the same task.
         <table style="width:100%">
           <tr>
             <td class="panel-heading" role="tab" id="heading5a">  
-            Dias, F. M., Samesima, N., <Strong>Ribeiro, A.</Strong>, Moreno, R. A., Pastore, C. A., Krieger, J. E., and Gutierrez,M. A. (2021). 2D Image-Based Atrial Fibrillation Classification. <i>In 2021 Computing in Cardiology (CinC),</i> volume 48, pages 1–4. IEEE. <a href="https://doi.org/10.23919/CinC53138.2021.9662735" target="_blank">https://doi.org/10.23919/CinC53138.2021.9662735</a></td>
+            Dias, F. M., Samesima, N., <Strong>Ribeiro, A. H.</Strong>, Moreno, R. A., Pastore, C. A., Krieger, J. E., and Gutierrez,M. A. (2021). 2D Image-Based Atrial Fibrillation Classification. <i>In 2021 Computing in Cardiology (CinC),</i> volume 48, pages 1–4. IEEE. <a href="https://doi.org/10.23919/CinC53138.2021.9662735" target="_blank">https://doi.org/10.23919/CinC53138.2021.9662735</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5a" aria-expanded="false" aria-controls="collapse5a"></a></td>
           </tr> 
         </table>
