--- a/index.html
+++ b/index.html
@@ -702,6 +702,20 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
     
         <div class="panel-group" id="accordion-libraries" role="tablist" aria-multiselectable="true">
        
+          <div class="panel panel-default">
+            <table style="width:100%">
+              <tr>
+                <td class="panel-heading" role="tab" id="heading3-libraries"><Strong>Ribeiro, A. H.</Strong> (2019). PAGId: an R package for causal effect identification in Partial Ancestral Graphs. <a href="https://github.com/adele/PAGId" target="_blank">https://github.com/adele/PAGId</a> </td>
+                <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion-libraries" data-target="#collapse3-libraries" aria-expanded="false" aria-controls="collapse3-libraries"></a></td>
+              </tr> 
+            </table>
+            <div id="collapse3-libraries" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3-libraries">
+                <div class="panel-body">
+                  This package implements the CIDP and IDP algorithms for identifying (conditional) causal effects from a Partial Ancentral Graph (PAG). Technical details are provided in the NeurIPS 2022 paper by Jaber A., Ribeiro A. H., Zhang J., and Bareinboim E., (2022) entitled "Causal Identification under Markov equivalence: Calculus, Algorithm, and Completeness".
+                 </div>
+              </div>
+           </div>
+
       <div class="panel panel-default">
         <table style="width:100%">
           <tr>
