--- a/index.html
+++ b/index.html
@@ -895,6 +895,28 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+        <tr>
+          <td style="vertical-align:top"> Aug 2022 </td>
+          <td> DAAD Postdoc-NeT-AI Tour, Germany <br>
+            Invited Talks <br>
+            Institute of Information Systems &amp;  Institute for Medical Biometrics and Statistics at the University of Lübeck; <br>
+            Institute for Computational Systems Biology at the University of Hamburg;<br>
+            Centre for Cognitive Science at TU Darmstadt;<br>
+            Center for Systems Biology and Department of Computer Science at TU Dresden; and<br>
+            Helmholtz Center Munich
+            <i> <strong>Ribeiro, A. H.</strong>. Causal Inference from Observational Data in Partially Understood Domains. </i>
+          </td>
+        </tr> 
+
+        <tr>
+          <td style="vertical-align:top"> Aug 2022 </td>
+          <td> <a target="_blank" href="https://twitter.com/Heiderlab/status/1562079688725614592?t=YzRaRbeaDXMn9LFjBFKSfQ&s=08"> Future Bioinformatics Workshop, Germany </a> <br>
+            Invited Talk <br>
+            <i> <strong>Ribeiro, A. H.</strong>. Causal AI: Towards Explainable, Generalizable, and Trustworthy Decision-Making. </i>
+          </td>
+        </tr> 
+
+
           <tr>
             <td style="vertical-align:top"> Jul 2022 </td>
             <td> <a target="_blank" href="http://lxmls.it.pt/2022/index.html#schedule"> 12th Lisbon Machine Learning Summer School (LxMLS - 2022) </a> <br>
