--- a/index.html
+++ b/index.html
@@ -895,6 +895,16 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+
+        <tr>
+          <td style="vertical-align:top"> Aug 2022 </td>
+          <td> <a target="_blank" href="https://aaai-23.aaai.org/bridge-program-cfps/"> Continual Causality - Bridge Program at AAAI-2023 </a>  <br>
+            90-min Tutorial <br>
+            Walter E. Washington Convention Center, Washington DC, USA <br>
+            <i> <strong>Ribeiro, A. H.</strong>. <a target="_blank" href="https://www.continualcausality.org/program/"> Putting the Causality in Continual Causality. </a>  </i>
+          </td>
+        </tr> 
+
         <tr>
           <td style="vertical-align:top"> Aug 2022 </td>
           <td> DAAD Postdoc-NeT-AI Tour, Germany <br>
@@ -903,7 +913,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             Institute for Computational Systems Biology at the University of Hamburg;<br>
             Centre for Cognitive Science at TU Darmstadt;<br>
             Center for Systems Biology and Department of Computer Science at TU Dresden; and<br>
-            Helmholtz Center Munich
+            Helmholtz Center Munich <br>
             <i> <strong>Ribeiro, A. H.</strong>. Causal Inference from Observational Data in Partially Understood Domains. </i>
           </td>
         </tr> 
