--- a/index.html
+++ b/index.html
@@ -895,9 +895,17 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+        <tr>
+          <td style="vertical-align:top"> Apr 2023 </td>
+          <td> <a target="_blank" href="https://crl-tuebingen-2023.github.io/speakers/"> Workshop on Causal Representation Learning </a>  <br>
+            Invited Talk <br>
+            Max Planck Institute for Intelligent Systems, Tübingen, Germany <br>
+            <i> <strong>Ribeiro, A. H.</strong>. Effect Identification in Cluster Causal Diagrams.</i>
+          </td>
+        </tr> 
 
         <tr>
-          <td style="vertical-align:top"> Aug 2022 </td>
+          <td style="vertical-align:top"> Feb 2023 </td>
           <td> <a target="_blank" href="https://aaai-23.aaai.org/bridge-program-cfps/"> Continual Causality - Bridge Program at AAAI-2023 </a>  <br>
             90-min Tutorial <br>
             Walter E. Washington Convention Center, Washington DC, USA <br>
