--- a/index.html
+++ b/index.html
@@ -897,6 +897,15 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
       <table class="table-borderless" style="width:100%">
         <tr>
           <td style="vertical-align:top"> Apr 2023 </td>
+          <td> <a target="_blank" href="https://probabilistic.ai/"> Nordic Probabilistic AI School - ProbAI 2023</a>  <br>
+            Invited Talk <br>
+            Norwegian University of Science and Technology (NTNU), Trondheim, Norway <br>
+            <i> <strong>Ribeiro, A. H.</strong>. Causal Inference: Towards Explainable, Generalizable, and Trustworthy AI. </i>
+          </td>
+        </tr> 
+
+        <tr>
+          <td style="vertical-align:top"> Apr 2023 </td>
           <td> <a target="_blank" href="https://crl-tuebingen-2023.github.io/speakers/"> Workshop on Causal Representation Learning </a>  <br>
             Invited Talk <br>
             Max Planck Institute for Intelligent Systems, Tübingen, Germany <br>
