--- a/index.html
+++ b/index.html
@@ -895,8 +895,18 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+
         <tr>
-          <td style="vertical-align:top"> Apr 2023 </td>
+          <td style="vertical-align:top"> Jul 2023 </td>
+          <td> <a target="_blank" href="https://www.youtube.com/watch?v=VA8vzmfnhyk"> 13rd Lisbon Machine Learning School - LxMLS 2023</a>  <br>
+            3-hour Tutorial <br>
+            Instituto Superior Técnico, Lisbon, Portugal <br>
+            <i> <strong>Ribeiro, A. H.</strong>. Causality and its Role in Reasoning, Explainability, and Generalizability. </i>
+          </td>
+        </tr> 
+
+        <tr>
+          <td style="vertical-align:top"> Jun 2023 </td>
           <td> <a target="_blank" href="https://probabilistic.ai/"> Nordic Probabilistic AI School - ProbAI 2023</a>  <br>
             Invited Talk <br>
             Norwegian University of Science and Technology (NTNU), Trondheim, Norway <br>
