--- a/index.html
+++ b/index.html
@@ -898,6 +898,15 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
 
         <tr>
           <td style="vertical-align:top"> Jul 2023 </td>
+          <td> <a target="_blank" href="https://essai.si/machines-climbing-pearls-ladder-of-causation/"> European Summer School on Artificial Intelligence - ESSAI 2023 </a>  <br>
+            5-day Course <br>
+            Faculty of Computer and Information Science, University of Ljubljana, Slovenia <br>
+            <i> <strong>Ribeiro, A. H.</strong>, Dhami, D., and Zecevic, M. Machines Climbing Pearl’s Ladder of Causation. </i>
+          </td>
+        </tr> 
+
+        <tr>
+          <td style="vertical-align:top"> Jul 2023 </td>
           <td> <a target="_blank" href="https://www.youtube.com/watch?v=VA8vzmfnhyk"> 13rd Lisbon Machine Learning School - LxMLS 2023</a>  <br>
             3-hour Tutorial <br>
             Instituto Superior Técnico, Lisbon, Portugal <br>
