--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <td> <a target="_blank" href="https://essai.si/machines-climbing-pearls-ladder-of-causation/"> European Summer School on Artificial Intelligence - ESSAI 2023 </a>  <br>
             5-day Course <br>
             Faculty of Computer and Information Science, University of Ljubljana, Slovenia <br>
-            <i> <strong>Ribeiro, A. H.</strong>, Dhami, D., and Zecevic, M. Machines Climbing Pearl’s Ladder of Causation. </i>
+            <i> <strong>Ribeiro, A. H.</strong>, Dhami, D., and Zecevic, M. Machines Climbing Pearl's Ladder of Causation. </i>
           </td>
         </tr> 
 
@@ -919,6 +919,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <td> <a target="_blank" href="https://probabilistic.ai/"> Nordic Probabilistic AI School - ProbAI 2023</a>  <br>
             Invited Talk <br>
             Norwegian University of Science and Technology (NTNU), Trondheim, Norway <br>
+            <a target="_blank" href="https://github.com/probabilisticai/probai-2023/tree/main/day_5"> Tutorial on GitHub. </a>
             <i> <strong>Ribeiro, A. H.</strong>. Causal Inference: Towards Explainable, Generalizable, and Trustworthy AI. </i>
           </td>
         </tr> 
