--- a/index.html
+++ b/index.html
@@ -897,6 +897,15 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
       <table class="table-borderless" style="width:100%">
 
         <tr>
+          <td style="vertical-align:top"> Aug 2023 </td>
+          <td> <a target="_blank" href="https://emap.fgv.br/en/event/recent-advances-causal-inference-under-limited-domain-knowledge/"> </a> FGV EMAp <br>
+            Invited Talk <br>
+            School of Applied Mathematics of Getulio Vargas Foundation (FGV EMAp), Rio de Janeiro, Brazil. <br>
+            <i> <strong>Ribeiro, A. H.</strong> Recent Advances in Causal Inference under Limited Domain Knowledge. </i>
+          </td>
+        </tr> 
+
+        <tr>
           <td style="vertical-align:top"> Jul 2023 </td>
           <td> <a target="_blank" href="https://essai.si/machines-climbing-pearls-ladder-of-causation/"> European Summer School on Artificial Intelligence - ESSAI 2023 </a>  <br>
             5-day Course <br>
