--- a/index.html
+++ b/index.html
@@ -895,6 +895,15 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+        <tr>
+          <td style="vertical-align:top"> Jan 2024 </td>
+          <td> <a target="_blank" href="https://probabilistic.ai/"> Tropical Probabilistic AI School - Tropical ProbAI 2024</a>  <br>
+            Invited Talk <br>
+            Hosted with the EMAp FGV Summer School on Data Science 2024, Rio de Janeiro, Brazil <br>
+            <a target="_blank" href="https://github.com/adele/Causality-Tutorial"> Tutorial on GitHub. </a><br>
+            <i> <strong>Ribeiro, A. H.</strong>. Introduction to Causal Inference. </i>
+          </td>
+        </tr> 
 
         <tr>
           <td style="vertical-align:top"> Aug 2023 </td>
@@ -928,7 +937,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <td> <a target="_blank" href="https://probabilistic.ai/"> Nordic Probabilistic AI School - ProbAI 2023</a>  <br>
             Invited Talk <br>
             Norwegian University of Science and Technology (NTNU), Trondheim, Norway <br>
-            <a target="_blank" href="https://github.com/probabilisticai/probai-2023/tree/main/day_5"> Tutorial on GitHub. </a>
+            <a target="_blank" href="https://github.com/probabilisticai/probai-2023/tree/main/day_5"> Tutorial on GitHub. </a><br>
             <i> <strong>Ribeiro, A. H.</strong>. Causal Inference: Towards Explainable, Generalizable, and Trustworthy AI. </i>
           </td>
         </tr> 
