--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
 
         <tr>
           <td style="vertical-align:top"> Aug 2023 </td>
-          <td> <a target="_blank" href="https://emap.fgv.br/en/event/recent-advances-causal-inference-under-limited-domain-knowledge/"> </a> FGV EMAp <br>
+          <td> <a target="_blank" href="https://emap.fgv.br/en/event/recent-advances-causal-inference-under-limited-domain-knowledge/"> Seminar at FGV EMAp  </a> <br>
             Invited Talk <br>
             School of Applied Mathematics of Getulio Vargas Foundation (FGV EMAp), Rio de Janeiro, Brazil. <br>
             <i> <strong>Ribeiro, A. H.</strong> Recent Advances in Causal Inference under Limited Domain Knowledge. </i>
