Fixing talk type

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
         <tr>
           <td style="vertical-align:top"> Jan 2024 </td>
           <td> <a target="_blank" href="https://probabilistic.ai/"> Tropical Probabilistic AI School - Tropical ProbAI 2024</a>  <br>
-            Invited Talk <br>
+            3-hour Tutorial <br>
             Hosted with the EMAp FGV Summer School on Data Science 2024, Rio de Janeiro, Brazil <br>
             <a target="_blank" href="https://github.com/adele/Causality-Tutorial"> Tutorial on GitHub. </a><br>
             <i> <strong>Ribeiro, A. H.</strong>. Introduction to Causal Inference. </i>
@@ -935,7 +935,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
         <tr>
           <td style="vertical-align:top"> Jun 2023 </td>
           <td> <a target="_blank" href="https://probabilistic.ai/"> Nordic Probabilistic AI School - ProbAI 2023</a>  <br>
-            Invited Talk <br>
+            3-hour Tutorial <br>
             Norwegian University of Science and Technology (NTNU), Trondheim, Norway <br>
             <a target="_blank" href="https://github.com/probabilisticai/probai-2023/tree/main/day_5"> Tutorial on GitHub. </a><br>
             <i> <strong>Ribeiro, A. H.</strong>. Causal Inference: Towards Explainable, Generalizable, and Trustworthy AI. </i>
