--- a/index.html
+++ b/index.html
@@ -202,14 +202,12 @@
                                 <div class="timeline-content">
                                     <div class="timeline-heading">
                                         <h3>Postdoctoral Scholar<br></h3>
-                                        <span> Causal Artificial Intelligence Laboratory<br>
-                                        Data Science / Computer Science Institutes <br>
-                                        Columbia University<br>
-                                        New York, NY, USA </span> 
-                                        
+                                        <span> Institute of Medical Informatics<br>
+                                        University of Münster<br>
+                                        Münster, Germany </span> 
                                         <div class="timeline-body"> 
-                                        <Strong>Project:</Strong> Causal Inference in the Health Sciences: from Biased and Heterogeneous Data Collections to Personalized and Improved Patient Outcomes. <br>
-                                        <Strong>Advisor:</Strong> Prof. Elias Bareinbom
+                                        <Strong>Project:</Strong> Causal Data Science and Machine Learning in Biomedicine.<br>
+                                        <Strong>Advisor:</Strong> Prof. Dominik Heider
                                          </div><!-- /timeline-body -->
                                          
                                          </div><!-- /timeline-heading -->
