--- a/index.html
+++ b/index.html
@@ -456,11 +456,50 @@
     
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
+        <div class="panel panel-default">
+          <table style="width:100%">
+            <tr>
+              <td class="panel-heading" role="tab" id="heading11">  
+                da Silva, T., Silva, E., Góis, A., Heider, D., Kaski, S. and Mesquita, D., <Strong>Ribeiro, A. H.</Strong> (2024). Human-Aided Discovery of Ancestral Graphs. 
+                <i> LXAI Workshop at Neural Information Processing Systems (NeurIPS 2024) </i> <a href="https://openreview.net/pdf?id=PVOpWUJORs" target="_blank">(Link)</a></td>
+              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11"></a></td>
+            </tr> 
+          </table>
+          <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading11">
+              <div class="panel-body">
+                In data-scarce situations, causal discovery (CD) algorithms often produce unreliable causal relationships that may 
+                conflict with expert knowledge, especially in the presence of latent confounders. 
+                Additionally, most CD methods lack adequate uncertainty quantification, hindering users' ability to evaluate and refine results. 
+                To address these issues, we present a fully probabilistic CD method referred to as Ancestral GFlowNets (AGFNs). 
+                In a nutshell, AGFNs sample ancestral graphs (AGs) proportionally to a score-based belief distribution, 
+                allowing users to assess % and propagate the uncertainty of the discovered causal relationships.  
+                On top of that, we design an elicitation framework that enables the incorporation of human knowledge into the inference process via importance sampling.
+                Notably, our approach naturally accommodates CD on data sets with latent confounding and potentially heterogeneous data types, a setting that has received little attention from the literature.   
+                Finally, experimental results with observational data show that our method effectively samples from distributions over AGs and significantly enhances inference quality with human aid.  
+              </div>
+          </div>
+
+        <div class="panel panel-default">
+          <table style="width:100%">
+            <tr>
+              <td class="panel-heading" role="tab" id="heading11">  
+                <Strong>Ribeiro, A. H.</Strong>, Crnkovic, M., Pereira, J. L., Fisberg, R. M., Sarti, F. M., Rogero, M. M., Heider, D., and Cerqueira, A. (2024). AnchorFCI: Harnessing Genetic Anchors for Enhanced Causal Discovery of Cardiometabolic Disease Pathways. <i> Frontiers in Genetics. </i> 
+                15:1436947. DOI: 10.3389/fgene.2024.1436947. <a href="https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2024.1436947/abstract" target="_blank">(Link)</a></td>
+              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11"></a></td>
+            </tr> 
+          </table>
+          <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading11">
+              <div class="panel-body">
+                Cardiometabolic diseases, a leading global health concern, arise from a complex interplay of lifestyle choices, genetic predispositions, and biochemical markers. Although extensive research has uncovered strong associations among various risk factors and these diseases, grasping their causal relationships is vital for gaining deeper mechanistic insights and designing effective prevention and intervention strategies. We address this gap by introducing anchorFCI, a novel adaptation of the conservative Really Fast Causal Inference (RFCI) algorithm designed to enhance the discovery of causal relationships by strategically selecting and integrating reliable anchor variables from an additional set known not to be caused by the variables of interest. This approach is particularly well-suited for learning causal networks involving phenotypic, clinical, and sociodemographic factors, leveraging genetic variables recognized as not being influenced by these factors. By integrating these anchor variables along with knowledge of their non-ancestral relationships, anchorFCI effectively handles latent confounding while enhancing both robustness and discovery power. We demonstrate its effectiveness using data from the 2015 ISA-Nutrition study in São Paulo, Brazil, and further estimate the effect sizes of the uncovered causal relationships with state-of-the-art tools from Judea Pearl's framework, presenting a fully data-driven causal inference pipeline. The results not only support many established causal relationships but also elucidate their interconnections within a complex network, enhancing our understanding of the broader dynamics and the multifaceted nature of cardiometabolic risk.</div>
+            </div>
+          </div>
+          
+
       <div class="panel panel-default">
         <table style="width:100%">
           <tr>
             <td class="panel-heading" role="tab" id="heading11">  
-		da Silva, T., Silva, E., <Strong>Ribeiro, A. H.</Strong>, Góis, A., Heider, D., Kaski, S. and Mesquita, D., (2023). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
+		        da Silva, T., Silva, E., Góis, A., Heider, D., Kaski, S. and Mesquita, D., <Strong>Ribeiro, A. H.</Strong> (2024). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11"></a></td>
           </tr> 
         </table>
@@ -475,7 +514,6 @@
         <table style="width:100%">
           <tr>
             <td class="panel-heading" role="tab" id="heading10">  
-
 		    Meneguitti Dias, F., Ribeiro, E., <Strong>Ribeiro, A. H.</Strong>, Krieger, J., Antonio Gutierrez, M. (2023). Artificial Intelligence-Driven Screening System for Rapid Image-Based Classification of 12-Lead ECG Exams: A Promising Solution for Emergency Room Prioritization. <i> IEEE Access </i> <a href="https://doi.org/10.1109/ACCESS.2023.3328538" target="_blank">https://doi.org/10.1109/ACCESS.2023.3328538</a></td>
         <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse10" aria-expanded="false" aria-controls="collapse10"></a></td>
       </tr> 
