--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ Third, we prove the proposed calculus to be complete for the same task.
         <table style="width:100%">
           <tr>
             <td class="panel-heading" role="tab" id="heading5a">           
-            <Strong>Ribeiro, A. H.*</Strong>, Vidal, M. C., Sato, J. R., Fujita A. (2021). Granger Causality among Graphs and Application to Functional Brain Connectivity in Autism Spectrum Disorder.<i> Entropy.</i> 23(9):1024. <a href="https://mdpi.com/1099-4300/23/9/1204" target="_blank">https://doi.org/10.3390/e23091204</a></td>
+            <Strong>Ribeiro, A. H.</Strong>, Vidal, M. C., Sato, J. R., Fujita A. (2021). Granger Causality among Graphs and Application to Functional Brain Connectivity in Autism Spectrum Disorder.<i> Entropy.</i> 23(9):1024. <a href="https://mdpi.com/1099-4300/23/9/1204" target="_blank">https://doi.org/10.3390/e23091204</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5a" aria-expanded="false" aria-controls="collapse5a"></a></td>
           </tr> 
         </table>
@@ -674,7 +674,7 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
        <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading4"><Strong>Ribeiro, A. H.*</Strong>, Soler, J. M. P. (2020). Learning Genetic and Environmental Graphical Models from Gaussian Family Data.<i> Statistics in Medicine.</i> 39: 2403– 2422. <a href="https://doi.org/10.1002/sim.8545" target="_blank">https://doi.org/10.1002/sim.8545</a></td>
+            <td class="panel-heading" role="tab" id="heading4"><Strong>Ribeiro, A. H.</Strong>, Soler, J. M. P. (2020). Learning Genetic and Environmental Graphical Models from Gaussian Family Data.<i> Statistics in Medicine.</i> 39: 2403– 2422. <a href="https://doi.org/10.1002/sim.8545" target="_blank">https://doi.org/10.1002/sim.8545</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4"></a></td>
           </tr> 
         </table>
@@ -688,7 +688,7 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
         <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading3"><Strong>Ribeiro, A. H.*</Strong>, Soler, J. M. P., Hirata Jr., R. (2019). Variance-Preserving Estimation of Intensity Values Obtained from Omics Experiments.<i>  Frontiers in Genetics.</i> 10:855. <a href="https://www.frontiersin.org/article/10.3389/fgene.2019.00855" target="_blank">https://doi.org/110.3389/fgene.2019.00855</a></td>
+            <td class="panel-heading" role="tab" id="heading3"><Strong>Ribeiro, A. H.</Strong>, Soler, J. M. P., Hirata Jr., R. (2019). Variance-Preserving Estimation of Intensity Values Obtained from Omics Experiments.<i>  Frontiers in Genetics.</i> 10:855. <a href="https://www.frontiersin.org/article/10.3389/fgene.2019.00855" target="_blank">https://doi.org/110.3389/fgene.2019.00855</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3"></a></td>
           </tr> 
         </table>
@@ -703,7 +703,7 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
      <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading2b"><Strong>Ribeiro, A. H.*</Strong> (2018). Identification of Causality in Genetics and Neuroscience.<i> Doctoral dissertation, Department of Computer Science, University of Sao Paulo. </i> <a href="https://doi.org/10.11606/T.45.2019.tde-15032019-190109" target="_blank">https://doi.org/10.11606/T.45.2019.tde-15032019-190109</a></td>
+            <td class="panel-heading" role="tab" id="heading2b"><Strong>Ribeiro, A. H.</Strong> (2018). Identification of Causality in Genetics and Neuroscience.<i> Doctoral dissertation, Department of Computer Science, University of Sao Paulo. </i> <a href="https://doi.org/10.11606/T.45.2019.tde-15032019-190109" target="_blank">https://doi.org/10.11606/T.45.2019.tde-15032019-190109</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2b" aria-expanded="false" aria-controls="collapse2b"></a></td>
           </tr> 
         </table>
@@ -718,7 +718,7 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
       <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading2"><Strong>Ribeiro, A. H.*</Strong>, Lotufo, P., Fujita, A, Goulart, A., Chor, D., Mill, J. G., Bensenor, I., Santos, I. S. (2017). Association Between Short-Term Systolic Blood Pressure Variability and Carotid Intima-Media Thickness in ELSA-Brasil Baseline.<i> American Journal of Hypertension.</i> 30:954–960. <a href="https://doi.org/10.1093/ajh/hpx076" target="_blank">https://doi.org/10.1093/ajh/hpx076</a> </td>
+            <td class="panel-heading" role="tab" id="heading2"><Strong>Ribeiro, A. H.</Strong>, Lotufo, P., Fujita, A, Goulart, A., Chor, D., Mill, J. G., Bensenor, I., Santos, I. S. (2017). Association Between Short-Term Systolic Blood Pressure Variability and Carotid Intima-Media Thickness in ELSA-Brasil Baseline.<i> American Journal of Hypertension.</i> 30:954–960. <a href="https://doi.org/10.1093/ajh/hpx076" target="_blank">https://doi.org/10.1093/ajh/hpx076</a> </td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2"></a></td>
           </tr> 
         </table>
@@ -732,7 +732,7 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
        <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading1"><Strong>Ribeiro, A. H.*</Strong>,  Soler, J. M. P., Neto, E. C., Fujita, A. (2016). Causal Inference and Structure Learning of Genotype-Phenotype Networks Using Genetic Variation.<i> In Big Data Analytics in Genomics. </i> Springer International Publishing, New York, p. 89-143. <a href="https://doi.org/10.1007/978-3-319-41279-5_3" target="_blank">https://doi.org/10.1007/978-3-319-41279-5_3</a></td>
+            <td class="panel-heading" role="tab" id="heading1"><Strong>Ribeiro, A. H.</Strong>,  Soler, J. M. P., Neto, E. C., Fujita, A. (2016). Causal Inference and Structure Learning of Genotype-Phenotype Networks Using Genetic Variation.<i> In Big Data Analytics in Genomics. </i> Springer International Publishing, New York, p. 89-143. <a href="https://doi.org/10.1007/978-3-319-41279-5_3" target="_blank">https://doi.org/10.1007/978-3-319-41279-5_3</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1"></a></td>
           </tr> 
         </table>
@@ -747,7 +747,7 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
        <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading0"><Strong>Ribeiro, A. H.*</Strong> (2014). Gene expression analysis taking into account measurement errors and application to real data.<i> Master thesis, Department of Computer Science, University of Sao Paulo. </i> <a href="https://doi.org/10.11606/D.45.2014.tde-04082014-163616" target="_blank">https://doi.org/10.11606/D.45.2014.tde-04082014-163616</a></td>
+            <td class="panel-heading" role="tab" id="heading0"><Strong>Ribeiro, A. H.</Strong> (2014). Gene expression analysis taking into account measurement errors and application to real data.<i> Master thesis, Department of Computer Science, University of Sao Paulo. </i> <a href="https://doi.org/10.11606/D.45.2014.tde-04082014-163616" target="_blank">https://doi.org/10.11606/D.45.2014.tde-04082014-163616</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse0" aria-expanded="false" aria-controls="collapse0"></a></td>
           </tr> 
         </table>
