--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <ul class="timeline">
                           <li>
                             <div class="posted-date">
-                                <span class="month">Out 2024</span>
+                                <span class="month">Oct 2024</span>
                             </div><!-- /posted-date -->
 
                             <div class="timeline-panel wow fadeInUp">
